@@ -1,4 +1,5 @@
 0.6.0
+* gmo: new module (Gettexts mo-file) (2007-12-10)
 * hnt: bug fix (2007-11-11)
 * hci: extends hni
 * hni: new module (Hash table base iterator) (2007-11-10)
